# Haskell-University-semester-1-solutions

exercise1/: exercise1.cabal
exercise1/app/: Main.hs
exercise1/src/: P1.hs  P2.hs  P3.hs
