name:           exercise1
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/exercise1

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      P1
      P2
      P3
  other-modules:
      Paths_exercise1
  default-language: Haskell2010

executable exercise1-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , exercise1
  other-modules:
      Paths_exercise1
  default-language: Haskell2010
